<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header" app:icon="@drawable/ic_baseline_message_24">

        <EditTextPreference
            app:key="signature"
            app:title="El teu nom"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="nick"
            app:title="El teu usuari"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header" app:icon="@drawable/ic_baseline_sync_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <DropDownPreference
            app:key="dropdown"
            app:title="@string/title_dropdown_preference"
            app:entries="@array/figures"
            app:useSimpleSummaryProvider="true"
            app:entryValues="@array/figureCodes"/>

        <SeekBarPreference
            android:key="seekbar"
            android:title="@string/title_seekbar_preference"
            android:max="10"
            android:defaultValue="5"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Ajustes del juego">
        <ListPreference
            app:key="figure"
            app:title="Tipo de figura"
            app:summary="Pulse para mostrar la lista"
            app:entries="@array/figures"
            app:entryValues="@array/figureCodes"
            app:dialogTitle="Elija la figura inicial"
            app:defaultValue="circulo"/>
        <CheckBoxPreference
            app:key="music"
            app:title="Música de fondo"
            app:summary="Marque si desea escuchar música"
            app:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>